--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>kekayan's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/jduncan017/resume/blob/0697d5eca0534607206e4c9e73101e3659500b77/SE%20ATS%20Resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://jduncan017.github.io/resume/SE%20ATS%20Resume.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
