--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
+  <title>Josh Duncan's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://jduncan017.github.io/resume/SE%20ATS%20Resume.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://jduncan017.github.io/resume/JoshDuncan.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
