--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="en" style="width:100%; height:100%;">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Josh Duncan's Resume</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
 </head>
-  <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://jduncan017.github.io/resume/JoshDuncan.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
-  </body>
+<body>
+  <iframe src="https://jduncan017.github.io/resume/JoshDuncan.pdf" allowfullscreen></iframe>
+  <p>If the resume does not display correctly, please <a href="https://jduncan017.github.io/resume/JoshDuncan.pdf" target="_blank">click here</a> to view it.</p>
+</body>
 </html>
